Empiezo los estilos de la vista XS

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +8,48 @@
   <title>CSS Lab | Responsive Cloning | Product Hunt</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-  
+  <main>
+    <header class="xs">
+      <img src="images/logo.png" alt="logo" id="logoImg">
+      <img src="images/search.png" alt="search" id="searchImg">
+      <input type="text" name="search" placeholder="Discover..." id="">
+      <a href="#settings">...</a>
+      <a href="#login">Login</a>
+    </header>
+    <nav class="xs">
+      <a href="#home" class="menu">Home</a>
+      <a href="#tech" class="menu">Tech</a>
+      <a href="#games" class="menu">Games</a>
+      <a href="#podcasts" class="menu">Podcasts</a>
+      <a href="#books" class="menu">Books</a>
+      <a href="#bots" class="menu">Bots</a>
+      <a href="#developerTools" class="menu">Developer Tools</a>
+      <a href="#iMessageApps" class="menu">iMessage Apps</a>
+      <img src="images/arrow-prev.png" alt="" class="arrow">
+      <img src="images/arrow-next.png" alt="" class="arrow">
+    </nav>
+    <section class="xs">
+      <h2>Popular this week</h2>
+      <article id="xs">
+        <img src="images/popular-this-week/app-1.png" alt="app-1">
+      </article>
+      <article id="xs">
+        <img src="images/popular-this-week/app-2.png" alt="app-2">
+      </article>
+      <article id="xs">
+        <img src="images/popular-this-week/app-3.png" alt="app-3">
+      </article>
+    </section>
+    <section class="xs">
+      <h2>Today</h2>
+      <article id="xs"></article>
+      <article id="xs"></article>
+      <article id="xs"></article>
+      <article id="xs"></article>
+    </section>
+  </main>
 </body>
+
 </html>
