Cambios de la edición de la vista mobile

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -11,6 +11,7 @@
 
 <body>
   <main>
+    <!-- header -->
     <header class="xs">
       <img src="images/logo.png" alt="logo" id="logoImg">
       <img src="images/search.png" alt="search" id="searchImg">
@@ -18,6 +19,7 @@
       <a href="#settings">...</a>
       <a href="#login">Login</a>
     </header>
+    <!-- nav -->
     <nav class="xs">
       <a href="#home" class="menu">Home</a>
       <a href="#tech" class="menu">Tech</a>
@@ -30,24 +32,123 @@
       <img src="images/arrow-prev.png" alt="" class="arrow">
       <img src="images/arrow-next.png" alt="" class="arrow">
     </nav>
+    <!-- section 1-->
     <section class="xs">
-      <h2>Popular this week</h2>
-      <article id="xs">
-        <img src="images/popular-this-week/app-1.png" alt="app-1">
+      <!--Title section-->
+      <div class="startSection">
+        <h2>Popular this week</h2>
+        <img src="images/close.png" alt="close" id="close">
+      </div>
+      <!--Article 1-->
+      <article>
+        <img src="images/popular-this-week/app-1.png" alt="app-1" class="articleImg">
+        <div class="articleDiv">
+          <h3>Duolingo Bots</h3>
+          <p>Al-powered characters to teach language conversation</p>
+          <div id="wrapperIcons">
+            <div><img src="images/votes.png" alt="votes">1460</div>
+            <div><img src="images/comments.png" alt="coments">49</div>
+            <div><img src="images/menu.png" alt="coments">SAVE</div>
+            <div><img src="images/maximize.png" alt="coments"></div>
+          </div>
+        </div>
       </article>
-      <article id="xs">
-        <img src="images/popular-this-week/app-2.png" alt="app-2">
+      <!--Article 2-->
+      <article>
+        <img src="images/popular-this-week/app-2.png" alt="app-2" class="articleImg">
+        <div class="articleDiv">
+          <h3>Tribe 2.0</h3>
+          <p>Introducing Augmented Messaging™</p>
+          <div id="wrapperIcons">
+            <div><img src="images/votes.png" alt="votes">1465</div>
+            <div><img src="images/comments.png" alt="coments">188</div>
+            <div><img src="images/menu.png" alt="coments">SAVE</div>
+            <div><img src="images/maximize.png" alt="coments"></div>
+          </div>
+        </div>
       </article>
-      <article id="xs">
-        <img src="images/popular-this-week/app-3.png" alt="app-3">
+      <!--Article 3-->
+      <article>
+        <img src="images/popular-this-week/app-3.png" alt="app-3" class="articleImg">
+        <div class="articleDiv">
+          <h3>workplace by Facebook</h3>
+          <p>Connect everyone in you company and turn ideas into action</p>
+          <div id="wrapperIcons">
+            <div><img src="images/votes.png" alt="votes">1003</div>
+            <div><img src="images/comments.png" alt="coments">80</div>
+            <div><img src="images/menu.png" alt="coments">SAVE</div>
+            <div><img src="images/maximize.png" alt="coments"></div>
+          </div>
+        </div>
       </article>
+      <div id="showMore">
+        <span><img src="images/arrow-down.png" alt="">SHOW MORE</span>
+      </div>
     </section>
+
+    <!-- section 2-->
     <section class="xs">
-      <h2>Today</h2>
-      <article id="xs"></article>
-      <article id="xs"></article>
-      <article id="xs"></article>
-      <article id="xs"></article>
+      <!--Title section-->
+      <div class="startSection">
+        <h2>Today</h2>
+        <img src="images/close.png" alt="close" id="close">
+      </div>
+      <!--Article 1-->
+      <article>
+        <img src="images/today/app-1.png" alt="app-1" class="articleImg">
+        <div class="articleDiv">
+          <h3>Sprayscape</h3>
+          <p>A perfectly imperfect VR-ish camera experiment, by Google</p>
+          <div id="wrapperIcons">
+            <div><img src="images/votes.png" alt="votes">82</div>
+            <div><img src="images/comments.png" alt="coments">8</div>
+            <div><img src="images/menu.png" alt="coments">SAVE</div>
+            <div><img src="images/maximize.png" alt="coments"></div>
+          </div>
+        </div>
+      </article>
+      <!--Article 2-->
+      <article>
+        <img src="images/today/app-2.png" alt="app-2" class="articleImg">
+        <div class="articleDiv">
+          <h3>Ask Gary Vee</h3>
+          <p>The unofficial Gary Vee persona chatbot on Messenger!</p>
+          <div id="wrapperIcons">
+            <div><img src="images/votes.png" alt="votes">21</div>
+            <div><img src="images/comments.png" alt="coments">9</div>
+            <div><img src="images/menu.png" alt="coments">SAVE</div>
+            <div><img src="images/maximize.png" alt="coments"></div>
+          </div>
+        </div>
+      </article>
+      <!--Article 3-->
+      <article>
+        <img src="images/today/app-3.png" alt="app-3" class="articleImg">
+        <div class="articleDiv">
+          <h3>The Electron Wheel</h3>
+          <p>turn your standard bicicle into an electric bike.</p>
+          <div id="wrapperIcons">
+            <div><img src="images/votes.png" alt="votes">23</div>
+            <div><img src="images/comments.png" alt="coments">2</div>
+            <div><img src="images/menu.png" alt="coments">SAVE</div>
+            <div><img src="images/maximize.png" alt="coments"></div>
+          </div>
+        </div>
+      </article>
+      <!--Article 4-->
+      <article>
+        <img src="images/today/app-4.png" alt="app-4" class="articleImg">
+        <div class="articleDiv">
+          <h3>Lattice Reviews</h3>
+          <p>360 degree feedback and perfomance reviews</p>
+          <div id="wrapperIcons">
+            <div><img src="images/votes.png" alt="votes">19</div>
+            <div><img src="images/comments.png" alt="coments">4</div>
+            <div><img src="images/menu.png" alt="coments">SAVE</div>
+            <div><img src="images/maximize.png" alt="coments"></div>
+          </div>
+        </div>
+      </article>
     </section>
   </main>
 </body>
