Vista Mobile finalizada

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -46,10 +46,10 @@
           <h3>Duolingo Bots</h3>
           <p>Al-powered characters to teach language conversation</p>
           <div id="wrapperIcons">
-            <div><img src="images/votes.png" alt="votes">1460</div>
+            <div><img src="images/votes2.png" alt="votes">1460</div>
             <div><img src="images/comments.png" alt="coments">49</div>
             <div><img src="images/menu.png" alt="coments">SAVE</div>
-            <div><img src="images/maximize.png" alt="coments"></div>
+            <div><img src="images/maximize.png" alt="coments" id="maximizeImg"></div>
           </div>
         </div>
       </article>
@@ -60,7 +60,7 @@
           <h3>Tribe 2.0</h3>
           <p>Introducing Augmented Messaging™</p>
           <div id="wrapperIcons">
-            <div><img src="images/votes.png" alt="votes">1465</div>
+            <div><img src="images/votes2.png" alt="votes">1465</div>
             <div><img src="images/comments.png" alt="coments">188</div>
             <div><img src="images/menu.png" alt="coments">SAVE</div>
             <div><img src="images/maximize.png" alt="coments"></div>
@@ -74,13 +74,14 @@
           <h3>workplace by Facebook</h3>
           <p>Connect everyone in you company and turn ideas into action</p>
           <div id="wrapperIcons">
-            <div><img src="images/votes.png" alt="votes">1003</div>
+            <div><img src="images/votes2.png" alt="votes">1003</div>
             <div><img src="images/comments.png" alt="coments">80</div>
             <div><img src="images/menu.png" alt="coments">SAVE</div>
             <div><img src="images/maximize.png" alt="coments"></div>
           </div>
         </div>
       </article>
+      <!--show more-->
       <div id="showMore">
         <span><img src="images/arrow-down.png" alt="">SHOW MORE</span>
       </div>
@@ -91,7 +92,7 @@
       <!--Title section-->
       <div class="startSection">
         <h2>Today</h2>
-        <img src="images/close.png" alt="close" id="close">
+        <span>POPULAR</span>|<span>NEWEST</span>
       </div>
       <!--Article 1-->
       <article>
@@ -100,7 +101,7 @@
           <h3>Sprayscape</h3>
           <p>A perfectly imperfect VR-ish camera experiment, by Google</p>
           <div id="wrapperIcons">
-            <div><img src="images/votes.png" alt="votes">82</div>
+            <div><img src="images/votes2.png" alt="votes">82</div>
             <div><img src="images/comments.png" alt="coments">8</div>
             <div><img src="images/menu.png" alt="coments">SAVE</div>
             <div><img src="images/maximize.png" alt="coments"></div>
@@ -114,7 +115,7 @@
           <h3>Ask Gary Vee</h3>
           <p>The unofficial Gary Vee persona chatbot on Messenger!</p>
           <div id="wrapperIcons">
-            <div><img src="images/votes.png" alt="votes">21</div>
+            <div><img src="images/votes2.png" alt="votes">21</div>
             <div><img src="images/comments.png" alt="coments">9</div>
             <div><img src="images/menu.png" alt="coments">SAVE</div>
             <div><img src="images/maximize.png" alt="coments"></div>
@@ -128,7 +129,7 @@
           <h3>The Electron Wheel</h3>
           <p>turn your standard bicicle into an electric bike.</p>
           <div id="wrapperIcons">
-            <div><img src="images/votes.png" alt="votes">23</div>
+            <div><img src="images/votes2.png" alt="votes">23</div>
             <div><img src="images/comments.png" alt="coments">2</div>
             <div><img src="images/menu.png" alt="coments">SAVE</div>
             <div><img src="images/maximize.png" alt="coments"></div>
@@ -142,13 +143,18 @@
           <h3>Lattice Reviews</h3>
           <p>360 degree feedback and perfomance reviews</p>
           <div id="wrapperIcons">
-            <div><img src="images/votes.png" alt="votes">19</div>
+            <div><img src="images/votes2.png" alt="votes">19</div>
             <div><img src="images/comments.png" alt="coments">4</div>
             <div><img src="images/menu.png" alt="coments">SAVE</div>
             <div><img src="images/maximize.png" alt="coments"></div>
           </div>
         </div>
       </article>
+      <!--show more-->
+      <div id="chat">
+        <img src="images/profile-woman.jpg" alt="">
+        <span>Hey everyone! We first launched our goal management tool on Product Hunt about 5 monts ago</span>
+      </div>
     </section>
   </main>
 </body>
