Empiezo la vista Small

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>CSS Lab | Responsive Cloning | Product Hunt</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="images/favicon.ico">
 </head>
 
 <body>
@@ -32,6 +33,12 @@
       <img src="images/arrow-prev.png" alt="" class="arrow">
       <img src="images/arrow-next.png" alt="" class="arrow">
     </nav>
+    <!-- Welcome -->
+    <div id="welcome">
+      <p><span>👋 Welcome to product Hunt </span>Get the best new products in your inbox, daily.</p>
+      <img src="images/close.png" alt="close">
+      <input type="text" placeholder="Your email"> <button>subscribe</button>
+    </div>
     <!-- section 1-->
     <section class="xs">
       <!--Title section-->
@@ -42,45 +49,71 @@
       <!--Article 1-->
       <article>
         <img src="images/popular-this-week/app-1.png" alt="app-1" class="articleImg">
+
         <div class="articleDiv">
           <h3>Duolingo Bots</h3>
           <p>Al-powered characters to teach language conversation</p>
+          <!--wrapperIcons-->
           <div id="wrapperIcons">
-            <div><img src="images/votes2.png" alt="votes">1460</div>
-            <div><img src="images/comments.png" alt="coments">49</div>
-            <div><img src="images/menu.png" alt="coments">SAVE</div>
-            <div><img src="images/maximize.png" alt="coments" id="maximizeImg"></div>
+            <div id="wrapperIconsLeft">
+              <div><img src="images/votes2.png" alt="votes">1460</div>
+              <div><img src="images/comments.png" alt="coments">49</div>
+              <div id="inTech">🏆 #IN TECH</div>
+              <div><img src="images/menu.png" alt="coments">SAVE</div>
+              <div><img src="images/maximize.png" alt="coments" id="maximizeImg"></div>
+            </div>
+            <div id="wrapperIconsRight">
+              <div>ANDROID</div> +4
+            </div>
           </div>
         </div>
+
       </article>
       <!--Article 2-->
       <article>
         <img src="images/popular-this-week/app-2.png" alt="app-2" class="articleImg">
+
         <div class="articleDiv">
           <h3>Tribe 2.0</h3>
           <p>Introducing Augmented Messaging™</p>
+          <!--wrapperIcons-->
           <div id="wrapperIcons">
-            <div><img src="images/votes2.png" alt="votes">1465</div>
-            <div><img src="images/comments.png" alt="coments">188</div>
-            <div><img src="images/menu.png" alt="coments">SAVE</div>
-            <div><img src="images/maximize.png" alt="coments"></div>
+            <div id="wrapperIconsLeft">
+              <div><img src="images/votes2.png" alt="votes">1465</div>
+              <div><img src="images/comments.png" alt="coments">188</div>
+              <div id="inTech">🏆 #IN TECH</div>
+              <div><img src="images/menu.png" alt="coments">SAVE</div>
+              <div><img src="images/maximize.png" alt="coments" id="maximizeImg"></div>
+            </div>
+            <div id="wrapperIconsRight">
+              <div>ANDROID</div> +4
+            </div>
           </div>
         </div>
       </article>
+
       <!--Article 3-->
       <article>
         <img src="images/popular-this-week/app-3.png" alt="app-3" class="articleImg">
+
         <div class="articleDiv">
-          <h3>workplace by Facebook</h3>
+          <h3>Workplace by Facebook</h3>
           <p>Connect everyone in you company and turn ideas into action</p>
+          <!--wrapperIcons-->
           <div id="wrapperIcons">
-            <div><img src="images/votes2.png" alt="votes">1003</div>
-            <div><img src="images/comments.png" alt="coments">80</div>
-            <div><img src="images/menu.png" alt="coments">SAVE</div>
-            <div><img src="images/maximize.png" alt="coments"></div>
+            <div id="wrapperIconsLeft">
+              <div><img src="images/votes2.png" alt="votes">1003</div>
+              <div><img src="images/comments.png" alt="coments">80</div>
+              <div id="inTech">🏆 #IN TECH</div>
+              <div><img src="images/menu.png" alt="coments">SAVE</div>
+              <div><img src="images/maximize.png" alt="coments" id="maximizeImg"></div>
+            </div>
+            <div id="wrapperIconsRight">
+              <div>ANDROID</div> +4
+            </div>
           </div>
-        </div>
       </article>
+
       <!--show more-->
       <div id="showMore">
         <span><img src="images/arrow-down.png" alt="">SHOW MORE</span>
@@ -97,56 +130,89 @@
       <!--Article 1-->
       <article>
         <img src="images/today/app-1.png" alt="app-1" class="articleImg">
+
         <div class="articleDiv">
           <h3>Sprayscape</h3>
           <p>A perfectly imperfect VR-ish camera experiment, by Google</p>
+          <!--wrapperIcons-->
           <div id="wrapperIcons">
-            <div><img src="images/votes2.png" alt="votes">82</div>
-            <div><img src="images/comments.png" alt="coments">8</div>
-            <div><img src="images/menu.png" alt="coments">SAVE</div>
-            <div><img src="images/maximize.png" alt="coments"></div>
+            <div id="wrapperIconsLeft">
+              <div><img src="images/votes2.png" alt="votes">82</div>
+              <div><img src="images/comments.png" alt="coments">8</div>
+              <div id="inTech">🏆 #IN TECH</div>
+              <div><img src="images/menu.png" alt="coments">SAVE</div>
+              <div><img src="images/maximize.png" alt="coments" id="maximizeImg"></div>
+            </div>
+            <div id="wrapperIconsRight">
+              <div>ANDROID</div> +4
+            </div>
           </div>
+
         </div>
       </article>
       <!--Article 2-->
       <article>
         <img src="images/today/app-2.png" alt="app-2" class="articleImg">
+
         <div class="articleDiv">
           <h3>Ask Gary Vee</h3>
           <p>The unofficial Gary Vee persona chatbot on Messenger!</p>
+          <!--wrapperIcons-->
           <div id="wrapperIcons">
-            <div><img src="images/votes2.png" alt="votes">21</div>
-            <div><img src="images/comments.png" alt="coments">9</div>
-            <div><img src="images/menu.png" alt="coments">SAVE</div>
-            <div><img src="images/maximize.png" alt="coments"></div>
+            <div id="wrapperIconsLeft">
+              <div><img src="images/votes2.png" alt="votes">21</div>
+              <div><img src="images/comments.png" alt="coments">9</div>
+              <div id="inTech">🏆 #IN TECH</div>
+              <div><img src="images/menu.png" alt="coments">SAVE</div>
+              <div><img src="images/maximize.png" alt="coments" id="maximizeImg"></div>
+            </div>
+            <div id="wrapperIconsRight">
+              <div>ANDROID</div> +4
+            </div>
           </div>
         </div>
       </article>
       <!--Article 3-->
       <article>
         <img src="images/today/app-3.png" alt="app-3" class="articleImg">
+
         <div class="articleDiv">
           <h3>The Electron Wheel</h3>
-          <p>turn your standard bicicle into an electric bike.</p>
+          <p>Turn your standard bicicle into an electric bike.</p>
+          <!--wrapperIcons-->
           <div id="wrapperIcons">
-            <div><img src="images/votes2.png" alt="votes">23</div>
-            <div><img src="images/comments.png" alt="coments">2</div>
-            <div><img src="images/menu.png" alt="coments">SAVE</div>
-            <div><img src="images/maximize.png" alt="coments"></div>
+            <div id="wrapperIconsLeft">
+              <div><img src="images/votes2.png" alt="votes">23</div>
+              <div><img src="images/comments.png" alt="coments">2</div>
+              <div id="inTech">🏆 #IN TECH</div>
+              <div><img src="images/menu.png" alt="coments">SAVE</div>
+              <div><img src="images/maximize.png" alt="coments" id="maximizeImg"></div>
+            </div>
+            <div id="wrapperIconsRight">
+              <div>ANDROID</div> +4
+            </div>
           </div>
         </div>
       </article>
       <!--Article 4-->
       <article>
         <img src="images/today/app-4.png" alt="app-4" class="articleImg">
+
         <div class="articleDiv">
           <h3>Lattice Reviews</h3>
           <p>360 degree feedback and perfomance reviews</p>
+          <!--wrapperIcons-->
           <div id="wrapperIcons">
-            <div><img src="images/votes2.png" alt="votes">19</div>
-            <div><img src="images/comments.png" alt="coments">4</div>
-            <div><img src="images/menu.png" alt="coments">SAVE</div>
-            <div><img src="images/maximize.png" alt="coments"></div>
+            <div id="wrapperIconsLeft">
+              <div><img src="images/votes2.png" alt="votes">19</div>
+              <div><img src="images/comments.png" alt="coments">4</div>
+              <div id="inTech">🏆 #IN TECH</div>
+              <div><img src="images/menu.png" alt="coments">SAVE</div>
+              <div><img src="images/maximize.png" alt="coments" id="maximizeImg"></div>
+            </div>
+            <div id="wrapperIconsRight">
+              <div>ANDROID</div> +4
+            </div>
           </div>
         </div>
       </article>
