--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -36,8 +36,8 @@
     <!-- Welcome -->
     <div id="welcome">
       <p><span>👋 Welcome to product Hunt </span>Get the best new products in your inbox, daily.</p>
+      <div><input type="text" placeholder="Your email"> <button>subscribe</button></div>
       <img src="images/close.png" alt="close">
-      <input type="text" placeholder="Your email"> <button>subscribe</button>
     </div>
     <!-- section 1-->
     <section class="xs">
@@ -59,11 +59,11 @@
               <div><img src="images/votes2.png" alt="votes">1460</div>
               <div><img src="images/comments.png" alt="coments">49</div>
               <div id="inTech">🏆 #IN TECH</div>
-              <div><img src="images/menu.png" alt="coments">SAVE</div>
-              <div><img src="images/maximize.png" alt="coments" id="maximizeImg"></div>
+              <div class="onlyMobile"><img src="images/menu.png" alt="coments">SAVE</div>
+              <div class="onlyMobile"><img src="images/maximize.png" alt="coments" id="maximizeImg"></div>
             </div>
             <div id="wrapperIconsRight">
-              <div>ANDROID</div> +4
+              <div>IPHONE</div>+2
             </div>
           </div>
         </div>
@@ -82,8 +82,8 @@
               <div><img src="images/votes2.png" alt="votes">1465</div>
               <div><img src="images/comments.png" alt="coments">188</div>
               <div id="inTech">🏆 #IN TECH</div>
-              <div><img src="images/menu.png" alt="coments">SAVE</div>
-              <div><img src="images/maximize.png" alt="coments" id="maximizeImg"></div>
+              <div class="onlyMobile"><img src="images/menu.png" alt="coments">SAVE</div>
+              <div class="onlyMobile"><img src="images/maximize.png" alt="coments" id="maximizeImg"></div>
             </div>
             <div id="wrapperIconsRight">
               <div>ANDROID</div> +4
@@ -105,11 +105,11 @@
               <div><img src="images/votes2.png" alt="votes">1003</div>
               <div><img src="images/comments.png" alt="coments">80</div>
               <div id="inTech">🏆 #IN TECH</div>
-              <div><img src="images/menu.png" alt="coments">SAVE</div>
-              <div><img src="images/maximize.png" alt="coments" id="maximizeImg"></div>
+              <div class="onlyMobile"><img src="images/menu.png" alt="coments">SAVE</div>
+              <div class="onlyMobile"><img src="images/maximize.png" alt="coments" id="maximizeImg"></div>
             </div>
             <div id="wrapperIconsRight">
-              <div>ANDROID</div> +4
+              <div>ANDROID</div> +2
             </div>
           </div>
       </article>
@@ -140,11 +140,11 @@
               <div><img src="images/votes2.png" alt="votes">82</div>
               <div><img src="images/comments.png" alt="coments">8</div>
               <div id="inTech">🏆 #IN TECH</div>
-              <div><img src="images/menu.png" alt="coments">SAVE</div>
-              <div><img src="images/maximize.png" alt="coments" id="maximizeImg"></div>
+              <div class="onlyMobile"><img src="images/menu.png" alt="coments">SAVE</div>
+              <div class="onlyMobile"><img src="images/maximize.png" alt="coments" id="maximizeImg"></div>
             </div>
             <div id="wrapperIconsRight">
-              <div>ANDROID</div> +4
+              <div>ANDROID</div> +3
             </div>
           </div>
 
@@ -163,11 +163,11 @@
               <div><img src="images/votes2.png" alt="votes">21</div>
               <div><img src="images/comments.png" alt="coments">9</div>
               <div id="inTech">🏆 #IN TECH</div>
-              <div><img src="images/menu.png" alt="coments">SAVE</div>
-              <div><img src="images/maximize.png" alt="coments" id="maximizeImg"></div>
+              <div class="onlyMobile"><img src="images/menu.png" alt="coments">SAVE</div>
+              <div class="onlyMobile"><img src="images/maximize.png" alt="coments" id="maximizeImg"></div>
             </div>
             <div id="wrapperIconsRight">
-              <div>ANDROID</div> +4
+              <div>SHITNOTE</div> +1
             </div>
           </div>
         </div>
@@ -185,8 +185,8 @@
               <div><img src="images/votes2.png" alt="votes">23</div>
               <div><img src="images/comments.png" alt="coments">2</div>
               <div id="inTech">🏆 #IN TECH</div>
-              <div><img src="images/menu.png" alt="coments">SAVE</div>
-              <div><img src="images/maximize.png" alt="coments" id="maximizeImg"></div>
+              <div class="onlyMobile"><img src="images/menu.png" alt="coments">SAVE</div>
+              <div class="onlyMobile"><img src="images/maximize.png" alt="coments" id="maximizeImg"></div>
             </div>
             <div id="wrapperIconsRight">
               <div>ANDROID</div> +4
@@ -207,14 +207,15 @@
               <div><img src="images/votes2.png" alt="votes">19</div>
               <div><img src="images/comments.png" alt="coments">4</div>
               <div id="inTech">🏆 #IN TECH</div>
-              <div><img src="images/menu.png" alt="coments">SAVE</div>
-              <div><img src="images/maximize.png" alt="coments" id="maximizeImg"></div>
+              <div class="onlyMobile"><img src="images/menu.png" alt="coments">SAVE</div>
+              <div class="onlyMobile"><img src="images/maximize.png" alt="coments" id="maximizeImg"></div>
             </div>
             <div id="wrapperIconsRight">
               <div>ANDROID</div> +4
             </div>
           </div>
         </div>
+
       </article>
       <!--show more-->
       <div id="chat">
