Done a la vista S y dejo a medias la MD

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -36,8 +36,8 @@
     <!-- Welcome -->
     <div id="welcome">
       <p><span>👋 Welcome to product Hunt </span>Get the best new products in your inbox, daily.</p>
-      <div><input type="text" placeholder="Your email"> <button>subscribe</button></div>
       <img src="images/close.png" alt="close">
+      <div><input type="text" placeholder="Your email"> <button>SUBSCRIBE</button></div>
     </div>
     <!-- section 1-->
     <section class="xs">
