Cambios en la vista Large

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -40,7 +40,7 @@
       <div><input type="text" placeholder="Your email"> <button>SUBSCRIBE</button></div>
     </div>
     <!-- section 1-->
-    <section class="xs">
+    <section class="xs" id="section1">
       <!--Title section-->
       <div class="startSection">
         <h2>Popular this week</h2>
@@ -121,7 +121,7 @@
     </section>
 
     <!-- section 2-->
-    <section class="xs">
+    <section class="xs" id="section2">
       <!--Title section-->
       <div class="startSection">
         <h2>Today</h2>
@@ -223,6 +223,21 @@
         <span>Hey everyone! We first launched our goal management tool on Product Hunt about 5 monts ago</span>
       </div>
     </section>
+    <div class="asides">
+      <!--aside1-->
+      <div id="aside1">
+        <div>
+          <h2>Kittybot for Slack.</h2>
+          <img src="images/close.png" alt="close">
+        </div>
+        <p>A friendly feline that sends you cool new things.</p>
+        <button># ADD KITTYBOT TO SLACK</button>
+      </div>
+      <!--aside2-->
+      <div id="aside2">Test</div>
+      <!--aside3-->
+      <div id="aside3">Test</div>
+    </div>
   </main>
 </body>
 
