--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -234,9 +234,62 @@
         <button># ADD KITTYBOT TO SLACK</button>
       </div>
       <!--aside2-->
-      <div id="aside2">Test</div>
+      <div id="aside2">
+        <h2>UPCOMING LIVE CHATS</h2>
+        <!--person1-->
+        <div class="person">
+          <img src="images/profile-man.jpg" alt="man">
+          <div>
+            <h4>Adam Besvinick</h4>
+            <p>VC ad Deep Fork Capital</p>
+            <span id="button">REMIND ME</span>
+          </div>
+        </div>
+        <!--person2-->
+        <div class="person">
+          <img src="images/profile-woman.jpg" alt="woman">
+          <div>
+            <h4>Susan David</h4>
+            <p>Autor of Emotionally Guilty</p>
+            <span id="button">REMIND ME</span>
+          </div>
+        </div>
+        <!--person3-->
+        <div class="person">
+          <img src="images/profile-man.jpg" alt="man">
+          <div>
+            <h4>Avid Lazizadeh Duggan</h4>
+            <p>General Partener at GV</p>
+            <span id="button">REMIND ME</span>
+          </div>
+        </div>
+        <!--person4-->
+        <div class="person">
+          <img src="images/profile-woman.jpg" alt="woman">
+          <div>
+            <h4>Katerina Markov Schneider</h4>
+            <p>Founder and CEO of Ritual</p>
+            <span id="button">REMIND ME</span>
+          </div>
+        </div>
+        <!--person5-->
+        <div class="person">
+          <img src="images/profile-man.jpg" alt="man">
+          <div>
+            <h4>Jocelyn Glei</h4>
+            <p>Master of Productivity, founder and author...</p>
+            <span id="button">REMIND ME</span>
+          </div>
+        </div>
+
+      </div>
+
       <!--aside3-->
-      <div id="aside3">Test</div>
+      <div id="aside3">
+        <span><h2>Tweets</h2>liked by</span>
+        <a href="#">@ProductHuntLOVE</a>
+        <img src="images/twitter.jpg" alt="twitter">
+      </div>
     </div>
   </main>
 </body>
